# backtrader

./: .pre-commit-config.yaml  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
backtrader/: __init__.py
backtrader/brokers/: ibbroker.py
backtrader/feeds/: ibdata.py
backtrader/stores/: ibstore.py
contrib/utils/: influxdb-import.py  iqfeed-to-influxdb.py
samples/: example.ipynb  tutorial.py
samples/analyzer-annualreturn/: analyzer-annualreturn.py
samples/bidask-to-ohlc/: bidask-to-ohlc.py
samples/bracket/: bracket.py
samples/btfd/: btfd.py
samples/calmar/: calmar-test.py
ta-lib/: Makefile  config.status  libtool
tests/: test_analyzer-sqn.py  test_analyzer-timereturn.py  test_comminfo.py  test_data_multiframe.py  test_data_replay.py  test_data_resample.py  test_ind_accdecosc.py  test_ind_aroonoscillator.py  test_ind_aroonupdown.py  test_ind_atr.py  test_ind_awesomeoscillator.py  test_ind_bbands.py  test_ind_cci.py  test_ind_dema.py  test_ind_demaenvelope.py  test_ind_demaosc.py  test_ind_dm.py  test_ind_dma.py  test_ind_downmove.py  test_ind_dpo.py  test_ind_dv2.py  test_ind_ema.py  test_ind_emaenvelope.py  test_ind_emaosc.py  test_ind_envelope.py  test_ind_heikinashi.py  test_ind_highest.py  test_ind_hma.py  test_ind_ichimoku.py  test_ind_kama.py  test_ind_kamaenvelope.py  test_ind_kamaosc.py  test_ind_kst.py  test_ind_lowest.py  test_ind_lrsi.py  test_ind_macdhisto.py  test_ind_minperiod.py  test_ind_momentum.py  test_ind_momentumoscillator.py  test_ind_oscillator.py  (+42 more)
tools/: bt-run.py  rewrite-data.py  yahoodownload.py
(+118 files in other folders)
