[project]
name = "backtrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pytest>=8.4.1",
    "ta-lib>=0.6.4",
]


[project.scripts]
hello = "backtrader:main.main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["backtrader"]
